--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
+    "@nuxtjs/cloudinary": "^1.0.3",
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
